--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "sweetalert2": "^11.16.0"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.16.0",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
